--- a/requirements.txt
+++ b/requirements.txt
@@ -19,31 +19,40 @@ h5py==3.7.0
 httptools==0.4.0
 huggingface-hub==0.8.1
 idna==3.3
+joblib==1.2.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
+mintlemon-turkish-nlp==0.2.2
+nltk==3.8.1
 numpy==1.23.1
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.5.3
 Pillow==9.2.0
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.9.1
 pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2023.3
 PyYAML==6.0
 regex==2022.7.25
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
 termcolor==1.1.0
+threadpoolctl==3.1.0
 tokenizers==0.12.1
 tqdm==4.64.0
 transformers==4.21.1
@@ -55,4 +64,4 @@ watchfiles==0.16.1
 websockets==10.3
 Werkzeug==2.2.1
 wrapt==1.14.1
-mintlemon-turkish-nlp==0.2.1
+zeyrek==0.1.3
